<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.MainActivity">
        <TextView
            android:id="@+id/first_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/typeYourFirstNameStr"
            style="@android:style/TextAppearance.Medium"/>
        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_text_view"
            android:layout_centerHorizontal="true"
            android:hint="@string/sampleFirstName"
            style="@android:style/TextAppearance.Medium"/>
        <TextView
            android:id="@+id/last_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/typeYourLastNameStr"
            style="@android:style/TextAppearance.Medium"/>
        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_text_view"
            android:layout_centerHorizontal="true"
            android:hint="@string/sampleLastName"
            style="@android:style/TextAppearance.Medium"/>
        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_edit_text"
            android:layout_centerHorizontal="true"
            android:text="@string/chooseYourBirthdayDataStr"
            style="@android:style/TextAppearance.Medium"/>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_text_view"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:startYear="@integer/startDate"/>
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/date_picker"
            android:text="@string/okButtonStr"
            style="@android:style/TextAppearance.Medium"/>
    </RelativeLayout>
</ScrollView>